contrast erros on links resolved

--- a/src/components/styles/ResultCard.css
+++ b/src/components/styles/ResultCard.css
@@ -8,6 +8,10 @@
     margin: auto;
 }
 
+.resultCard a {
+    color: #36618f;
+}
+
 .resultCard img {
     width: 15em;
     height: 18em;
